--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventSubscriber\CreationSubscriber:
+        tags:
+            - { name: 'doctrine.event_subscriber' }
