--- a/.env
+++ b/.env
@@ -31,3 +31,11 @@ APP_SECRET=1bced98b12251dac6bd79b73f15b7adc
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://user:password@127.0.0.1:3306/lillejudo?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+#MAILER_URL=null://localhost
+MAILER_URL=gmail://fiche.contact0000@gmail.com:Azerty0000@localhost
+###< symfony/swiftmailer-bundle ###
