--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -20,9 +20,11 @@ easy_admin:
                 fields:
                     - { property: 'title', label: 'Titre', type: 'string' }
                     - { property: 'body', label: 'Corps', type: 'text' }
+                    - { property: 'image', label: 'Image', type: 'image', base_path: '%app.path.post_images%' }
                     - { property: 'createdAt', label: 'Date de création', type: 'datetime' }
                     - { property: 'updatedAt', label: 'Date de mise à jour', type: 'datetime' }
             form:
                 fields:
                     - { property: 'title', label: 'Titre' }
                     - { property: 'body', label: 'Corps', type: 'fos_ckeditor' }
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image' }
