--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,3 +5,9 @@ vich_uploader:
         post_images:
             uri_prefix: '%app.path.post_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.post_images%'
+        post_club_images:
+            uri_prefix: '%app.path.post_club_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.post_club_images%'
+        post_natio_images:
+            uri_prefix: '%app.path.post_natio_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.post_natio_images%'
