[+] post for actualites natio/inter - fixtures for this - admin for this - uploader for this - templates for this

--- a/src/DataFixtures/fixtures.yml
+++ b/src/DataFixtures/fixtures.yml
@@ -13,3 +13,8 @@ App\Entity\PostClub:
   postClub{1..100}:
     title: '<word()>'
     body: '<text()>'
+
+App\Entity\PostNatio:
+  postNatio{1..100}:
+    title: '<word()>'
+    body: '<text()>'
