--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -11,3 +11,6 @@ vich_uploader:
         post_natio_images:
             uri_prefix: '%app.path.post_natio_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.post_natio_images%'
+        post_profeseurs_images:
+            uri_prefix: '%app.path.post_professeurs_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.post_professeurs_images%'
