--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     app.path.post_images: /uploads/post
     app.path.post_club_images: /uploads/club
     app.path.post_natio_images: /uploads/natio
+    app.path.post_professeurs_images: /uploads/professeurs
 
 services:
     # default configuration for services in *this* file
