--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -15,12 +15,14 @@ easy_admin:
             - { entity: 'PostClub', icon: 'tag' }
             - { entity: 'PostNatio', icon: 'tag' }
             - { entity: 'Professeurs', icon: 'chalkboard-teacher' }
+            - { entity: 'Bureau', icon: 'laptop-house' }
         form_theme:
             - '@EasyAdmin/form/bootstrap_4.html.twig'
             - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
     entities:
         Post:
             class: App\Entity\Post
+            label: 'Newsletter'
             list:
                 fields:
                     - { property: 'title', label: 'Titre', type: 'string' }
@@ -35,6 +37,7 @@ easy_admin:
                     - { property: 'imageFile', label: 'Image', type: 'vich_image' }
         PostClub:
             class: App\Entity\PostClub
+            label: 'Actualités Club'
             list:
                 fields:
                     - { property: 'title', label: 'Titre', type: 'string' }
@@ -49,6 +52,7 @@ easy_admin:
                     - { property: 'imageFile', label: 'Image', type: 'vich_image' }
         PostNatio:
               class: App\Entity\PostNatio
+              label: 'Actualités Nationale/Internationale'
               list:
                   fields:
                       - { property: 'title', label: 'Titre', type: 'string' }
@@ -66,8 +70,20 @@ easy_admin:
             list:
                 fields:
                     - { property: 'text', label: 'Texte', type: 'string' }
-                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.post_professeurs_images%' }
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.professeurs_images%' }
             form:
                 fields:
                     - { property: 'text', label: 'Texte' }
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image' }
+        Bureau:
+            class: App\Entity\Bureau
+            list:
+                fields:
+                    - { property: 'text', label: 'Texte', type: 'string' }
+                    - { property: 'role', label: 'Role', type: 'string' }
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.bureau_images%' }
+            form:
+                fields:
+                    - { property: 'text', label: 'Texte' }
+                    - { property: 'role', label: 'Role', type: 'choice', type_options: { choices: { Président: 'Président', Trésorier: 'Trésorier', Secrétaire: 'Secrétaire', 'Secrétaire Adjointe': 'Secrétaire Adjointe' } } }
                     - { property: 'imageFile', label: 'Image', type: 'vich_image' }
