--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -17,3 +17,6 @@ vich_uploader:
         bureau_images:
             uri_prefix: '%app.path.bureau_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.bureau_images%'
+        gallery_images:
+            uri_prefix: '%app.path.gallery_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.gallery_images%'
