--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,6 +9,7 @@ parameters:
     app.path.post_natio_images: /uploads/natio
     app.path.professeurs_images: /uploads/professeurs
     app.path.bureau_images: /uploads/bureau
+    app.path.gallery_images: /uploads/gallery
 
 services:
     # default configuration for services in *this* file
