--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -72,14 +72,16 @@ easy_admin:
                 fields:
                     - { property: 'nom', label: 'Nom', type: 'string' }
                     - { property: 'prenom', label: 'Prénom', type: 'string' }
-                    - { property: 'text', label: 'Texte', type: 'string' }
+                    - { property: 'grade', label: 'Grade', type: 'string' }
+                    - { property: 'diplome', label: 'Diplomes', type: 'string' }
                     - { property: 'role', label: 'Role', type: 'string' }
                     - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.professeurs_images%' }
             form:
                 fields:
                     - { property: 'nom', label: 'Nom' }
                     - { property: 'prenom', label: 'Prénom' }
-                    - { property: 'text', label: 'Texte' }
+                    - { property: 'grade', label: 'Grade' }
+                    - { property: 'diplome', label: 'Diplomes' }
                     - { property: 'role', label: 'Role' }
                     - { property: 'imageFile', label: 'Image', type: 'vich_image' }
         Bureau:
