--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -13,7 +13,7 @@ easy_admin:
             - { label: 'Accueil Site', route: 'accueil', icon: 'home' }
             - { label: 'Club' }
             - label: 'Histoire'
-              children: ['HistoireClub']
+              children: ['HistoireClub', 'HistoirePresidents']
             - { entity: 'Professeurs', label: 'Enseignants', icon: 'chalkboard-teacher' }
             - { entity: 'Bureau', icon: 'laptop-house' }
             - { label: 'Disciplines' }
@@ -128,5 +128,18 @@ easy_admin:
             form:
                 fields:
                     - { property: 'titre', label: 'Titre' }
+                    - { property: 'annee', label: 'Année', type: 'integer' }
+                    - { property: 'texte', label: 'Texte', type: 'textarea' }
+        HistoirePresidents:
+            class: App\Entity\HistoriquePresidents
+            label: 'Les Divers Présidents'
+            list:
+                fields:
+                    - { property: 'titre', label: 'Nom', type: 'string' }
+                    - { property: 'annee', label: 'Année', type: 'integer' }
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+            form:
+                fields:
+                    - { property: 'titre', label: 'Nom' }
                     - { property: 'annee', label: 'Année', type: 'integer' }
                     - { property: 'texte', label: 'Texte', type: 'textarea' }
