--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,7 @@ parameters:
     app.path.professeurs_images: /uploads/professeurs
     app.path.bureau_images: /uploads/bureau
     app.path.gallery_images: /uploads/gallery
+    app.path.boutique_images: /uploads/boutique
     app.path.fiche_inscription: /uploads/fiche
 
 services:
