--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -11,6 +11,8 @@ easy_admin:
             favicon: '/assets/favicon.ico'
         menu:
             - { label: 'Accueil Site', route: 'accueil', icon: 'home' }
+            - { label: 'Boutique'}
+            - { entity: 'Boutique', label: 'Boutique', icon: 'shopping-cart' }
             - { label: 'Club' }
             - label: 'Histoire'
               children: ['HistoireClub', 'HistoirePresidents', 'HistoirePersonnalites', 'HistoireEnseignement']
@@ -173,3 +175,15 @@ easy_admin:
             form:
                 fields:
                     - { property: 'ficheFile', label: 'Fiche', type: 'vich_file', type_options: { allow_delete: false } }
+        Boutique:
+            class: App\Entity\Boutique
+            list:
+                fields:
+                    - { property: 'objet', label: 'Objet', type: 'string' }
+                    - { property: 'prix', label: 'Prix', type: 'string' }
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.boutique_images%' }
+            form:
+                fields:
+                    - { property: 'objet', label: 'Objet' }
+                    - { property: 'prix', label: 'Prix', type: 'money' }
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { allow_delete: false, required: true }  }
