--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -20,6 +20,9 @@ vich_uploader:
         gallery_images:
             uri_prefix: '%app.path.gallery_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.gallery_images%'
+        boutique_images:
+            uri_prefix: '%app.path.boutique_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.boutique_images%'
         fiche_inscription:
             uri_prefix: '%app.path.fiche_inscription%'
             upload_destination: '%kernel.project_dir%/public%app.path.fiche_inscription%'
