--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "easycorp/easyadmin-bundle": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^5.2",
+        "martin-georgiev/social-post-bundle": "^3.1",
         "mhujer/breadcrumbs-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
