[+] evenement and calendar

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
+        "tattali/calendar-bundle": "^1.2",
         "vich/uploader-bundle": "^1.15"
     },
     "require-dev": {
